# ByteSizedExamples

./: .gitignore  README.md
agent-commit-provenance-typescript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
agent-memory-layer-typescript/: README.md  package-lock.json  package.json  tsconfig.json
ai-agent-observability/: README.md
ai-code-review-agent/: package.json
ai-pr-reviewer-csharp/: .env.example  (+7 more)
tutorial-llm-guardrails-production/: .env.example  .gitignore  COMPLETION_SUMMARY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
tutorial-llm-guardrails-production/.github/workflows/: ci-cd.yml
tutorial-llm-guardrails-production/deployment/kubernetes/: deployment.yaml
tutorial-llm-guardrails-production/docs/: architecture.md
tutorial-llm-guardrails-production/src/: __init__.py
tutorial-llm-guardrails-production/src/api/: __init__.py  main.py
tutorial-llm-guardrails-production/src/config/: __init__.py  settings.py
tutorial-llm-guardrails-production/src/guardrails/: __init__.py  orchestrator.py  pii_detector.py  rate_limiter.py  toxicity_detector.py
tutorial-llm-guardrails-production/src/monitoring/: __init__.py  logging.py  metrics.py
tutorial-llm-guardrails-production/tests/: conftest.py
tutorial-llm-guardrails-production/tests/integration/: test_guardrail_flow.py
tutorial-llm-guardrails-production/tests/unit/: test_api.py  test_logging.py  test_metrics.py  test_orchestrator.py  test_pii_detector.py  test_rate_limiter.py  test_toxicity_detector.py
(+372 files in other folders)
